fixing setting popup content on mobile

--- a/styles.css
+++ b/styles.css
@@ -563,7 +563,11 @@ form {
   }
 
   .setting-popup-content {
-    width: 300px;
+    width: 350px;
+  }
+
+  .setting-time {
+    width: 80px;
   }
 
   .task-info {
